# fern

./: .envrc  Cargo.toml  LICENSE.md  README.md  after_help.txt  fern.yaml
.github/workflows/: ci.yaml
example/: fern.confg.yaml  fern.yaml  not-really.yaml  random.txt
example/bar/: fern.yaml
example/bar/batz/: fern.yaml
example/custom/: fern.yaml
example/custom/other/: fern.yaml
example/foo/batz/: fern.yaml
src/: arguments.rs  leaf.rs  main.rs  seed.rs  steps.rs
tests/: basic_usage.rs  custom_commands.rs  seeding_examples.rs  utils.rs
