[package]
name = "fern"
version = "0.0.1"
authors = ["Felipe Sere <felipesere@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ignore = "0.4.12"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8.11"
git-version = "0.3.4"
pico-args = "0.3.1"
snafu = "0.6.3"
dirs = "2.0.2"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"

[dev-dependencies]
assert_cmd = "0.12.0"
predicates = "1.0.4"
assert_fs = "0.13.1"
