[package]
name = "fern-run"
version = "0.0.1"
authors = ["Felipe Sere <felipesere@gmail.com>"]
edition = "2018"
description = "A command runner. Its gives different parts of your mono-repo a unified interface to run certain tasks."

documentation = "https://github.com/felipesere/fern"
homepage = "https://github.com/felipesere/fern"
repository = "https://github.com/felipesere/fern"

readme = "README.md"
license = "MIT"

keywords = ["cli"]
categories = ["command-line-interface", "command-line-utilities"]

[dependencies]
ignore = "0.4.12"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8.11"
pico-args = "0.3.1"
snafu = "0.6.3"
dirs = "2.0.2"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"

[dev-dependencies]
assert_cmd = "0.12.0"
predicates = "1.0.4"
assert_fs = "0.13.1"


[[bin]]
name = "fern"
path = "src/main.rs"