[package]
name = "fern-run"
version = "0.0.4"
authors = ["Felipe Sere <fern@felipesere.com>"]
edition = "2018"
description = "A command runner. Its gives different parts of your mono-repo a unified interface to run certain tasks."

documentation = "https://github.com/felipesere/fern"
homepage = "https://github.com/felipesere/fern"
repository = "https://github.com/felipesere/fern"

readme = "README.md"
license = "MIT"

keywords = ["cli"]
categories = ["command-line-interface", "command-line-utilities"]

[dependencies]
clap = "3.0.0-beta.5"
ignore = "0.4.12"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8.11"
dirs = "4.0.0"
anyhow = "1.0.28"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"

[dev-dependencies]
assert_cmd = "2.0.2"
predicates = "2.0.0"
assert_fs = "1.0.0"


[[bin]]
name = "fern"
path = "src/main.rs"
